fixed shortlist items on safari by adding container

--- a/workfindr/client/css/index.css
+++ b/workfindr/client/css/index.css
@@ -317,6 +317,7 @@ main {
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 3;
+  max-height: 15em;
 }
 
 /* TODO: Added shadow - this make them look more like buttons but is there a better way to accomplish this? */
